tests/snapshots/yaml_suite_snapshots__yaml_suite_EW3V_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Wrong indendation in mapping
  from: "@perlpunk"
  tags: error mapping indent
  fail: true
  yaml: "k1: v1\n k2: v2\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :k1\n"
