tests/snapshots/yaml_suite_snapshots__yaml_suite_EW3V_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Wrong indendation in mapping
  tags: error mapping indent
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :k1\n"
  yaml: "k1: v1\n k2: v2\n"
