tests/snapshots/yaml_suite_snapshots__yaml_suite_EX5H_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "'a b c d\n\n  e'\n"
  emit: "--- a b c d\n\ne\n"
  from: "9YRD, modified for YAML 1.3"
  json: "\"a b c d\\ne\"\n"
  name: "Multiline Scalar at Top Level [1.3]"
  tags: scalar whitespace 1.3-mod
  tree: "+STR\n +DOC ---\n  =VAL :a b c d\\ne\n -DOC\n-STR\n"
  yaml: "---\na\nb␣␣\n  c\nd\n\ne\n"
