tests/snapshots/yaml_suite_snapshots__yaml_suite_EXG3_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "'---word1 word2'\n"
  emit: "--- '---word1 word2'\n"
  from: "82AN, modified for YAML 1.3"
  json: "\"---word1 word2\"\n"
  name: "Three dashes and content without space [1.3]"
  tags: scalar 1.3-mod
  tree: "+STR\n +DOC ---\n  =VAL :---word1 word2\n -DOC\n-STR\n"
  yaml: "---\n---word1\nword2\n"
